--- a/LikeABus/LikeABus/Views/Home/FeedBack.cshtml
+++ b/LikeABus/LikeABus/Views/Home/FeedBack.cshtml
@@ -1,15 +1,15 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "FeedBack";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 <form>
     <label>
-        <input type="radio" name="rating" checked/>
+        <input id ="up" class="rating" type="radio" name="rating" checked/>
         <img class="col-xs-4" src="../../Content/happy.png" />
     </label>
     <label>
-        <input type="radio" name="rating"/>
+        <input id="down" class="rating" type="radio" name="rating" />
         <img class="col-xs-4" src="../../Content/sad.png"/>
     </label>
 
@@ -17,6 +17,6 @@
         Comments<br />
         <textarea class="col-xs-8"></textarea>
     </div>
-    <input class="col-xs-2" type="submit" />
+    <input id="submit" class="col-xs-2" type="submit" />
 </form>
     
